tests/baselines/reference/parserInterfaceDeclaration4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration4.ts (1 errors) ====
    static interface I {
    ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    }